<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swiperefresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.xcjr.cui.widget.AddMoreListView
                android:id="@+id/list_addmore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:cacheColorHint="@android:color/transparent"
                android:divider="@null"
                android:headerDividersEnabled="@null"
                android:listSelector="@android:color/transparent"
                android:scrollbars="none" />
        </android.support.v4.widget.SwipeRefreshLayout>

        <!--<com.zyx.driver.common.widget.LoadingProgress-->
        <!--android:id="@+id/progressBar"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerInParent="true" />-->

        <LinearLayout
            android:id="@+id/lLayout_netError"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_netError_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@null"
                android:drawableTop="@drawable/ic_no_net"
                android:maxWidth="160dp"
                android:text="@string/net_error"
                android:textColor="@color/grey51"
                android:textSize="15sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_netError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingBottom="6dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="6dp"
                android:text="@string/click_retry"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_noData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@null"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/ic_no_data"
            android:maxWidth="160dp"
            android:text="@string/click_refresh"
            android:textColor="@color/grey51"
            android:textSize="16sp"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>
